[package]
name = "t3-chat-export-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
color-eyre = "0.6.3"
eframe = "0.31.1"
egui_extras = "0.31.1"
eyre = "0.6.12"
itertools = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
